Retry getting header to stop hiding behind objects

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ a{
     position: sticky;
     top: 0px;
     left: 0px;
+    z-index: 999;
 }
 
 nav ul{
